--- a/www/templates/favorites.html
+++ b/www/templates/favorites.html
@@ -7,7 +7,9 @@
     </ion-nav-buttons>
   <ion-content>
     <ion-list show-delete="shouldShowDelete">
-      <ion-item ng-repeat="dish in dishes | favoriteFilter:favorites" href="#/app/menu/{{dish.id}}" class="item-thumbnail-left" on-swipe-left="deleteFavorite(dish.id)">
+          
+      <ion-item ng-repeat="dish in dishes | favoriteFilter:favorites" href="#/app/menu/{{dish.id}}" class="item-thumbnail-left" 
+                on-swipe-left="deleteFavorite(dish.id)">                 
         <img ng-src="{{baseURL+dish.image}}">
         <h2>{{dish.name}}
          <span style="font-size:75%">{{dish.price | currency}}</span>
@@ -17,6 +19,7 @@
           ng-click="deleteFavorite(dish.id)">
         </ion-delete-button>
       </ion-item>
+        
     </ion-list>
   </ion-content>
  </ion-view>
