Ionic Modals, Forms, Popovers

--- a/www/templates/dishdetail.html
+++ b/www/templates/dishdetail.html
@@ -1,4 +1,12 @@
 <ion-view view-title="Dish Details">
+    
+    <ion-nav-buttons side="right">
+        
+      <button class="button" ng-click="openPopover($event)">          
+          <span>. . .</span>
+      </button>        
+    </ion-nav-buttons>
+    
   <ion-content>
       <div class="card">
           <div class="item item-body item-text-wrap">
